# soil-tester

./: DoxygenLayout.xml  README.md  questions.md
.github/: FUNDING.yml
code/: About.md  CMakeLists.txt  Code.md  about.md  main.c
code/analysis/: CMakeLists.txt  analyze.md
code/arduino/: CMakeLists.txt  System.md  interrupts.c  interrupts.h  log.c  sys.c  sys.h  system.md
code/arduino/include/arduino/: interrupts.h  log.h
code/centrifuge/: CMakeLists.txt  centrifuge.md
code/injector/: CMakeLists.txt  injector.md
code/pump/: CMakeLists.txt  README.md  pump.md
code/sampler/: CMakeLists.txt  README.md
docs/: 2024-10-03_8md.html  2024-10-06_8md.html  2024-10-07_8md.html  About_8md.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Centrifuge_8md.html  Code_8md.html  Injector_8md.html  Pump_8md.html  README_8md.html  System_8md.html  about_8md.html  analyze_8c.html  analyze_8h.html  analyze_8h_source.html  analyze_8md.html  centrifuge_2README_8md.html  centrifuge_8c.html  centrifuge_8h.html  centrifuge_8h_source.html  centrifuge_8md.html  dir_018a13a2a449345579a511a35b66f14b.js  dir_0415333496b27a5cdb1ac79f0581641c.html  dir_0415333496b27a5cdb1ac79f0581641c.js  dir_050edd66366d13764f98250ef6db77f6.html  dir_05ee31784900c30734478cd86d69db53.html  dir_060f41b20d6c89db2f90aa844f1c4bc7.js  dir_08e3cba5eb2e412674946178c08340f0.html  dir_08e3cba5eb2e412674946178c08340f0.js  dir_0b1547634c9061a51e397d65ee463b07.html  dir_0b1547634c9061a51e397d65ee463b07.js  dir_0cdb2cc866043764b6efbddec577e796.html  dir_0cdb2cc866043764b6efbddec577e796.js  dir_0f53dbfe9a185194ec98b48fc467ecae.js  dir_12df9c29bc0baba606a18c7e1e4a1e1d.js  dir_176af34e424baa1e746ad26b8c8c983a.html  dir_1ae4179d5e953611aae20c997279e02c.html  dir_1ae4179d5e953611aae20c997279e02c.js  dir_1b67cce1bc2de09ddca3d29e55bc2942.html  (+193 more)
docs/d0/d04/: md_code_2arduino_2README.html
docs/d0/d17/: md_code_2injector_2README.html
docs/d0/d29/: main_8c.html
docs/d0/d30/: md_README.html
docs/d0/d44/: md_code_2arduino_2README.html
docs/d2/dd9/: centrifuge_8c.html
docs/d6/d0d/: interrupts_8h_source.html
docs/d6/ded/: interrupts_8h.html
docs/d8/d91/: sys_8c.html
docs/d8/d94/: injector_8h.html  injector_8h_source.html
docs/d9/d87/: sys_8h_source.html
docs/da/d46/: injector_8c.html
docs/da/ddd/: README_8md.html
docs/db/d70/: sample_8h.html  sample_8h_source.html
docs/dc/d05/: md_code_2README.html
docs/dc/d9b/: pump_8c.html
docs/html/: 2024-10-03_8md.html  2024-10-06_8md.html  CMakeCCompilerId_8c.html  Centrifuge_8md.html  Code_8md.html  Injector_8md.html  Pump_8md.html  README_8md.html  Sampler_8md.html  about_8md.html  analyze_8c.html  analyze_8h.html  analyze_8h_source.html  analyze_8md.html  arduino_2README_8md.html  centrifuge_8c.html  centrifuge_8c_8o_8d.html  centrifuge_8h.html  centrifuge_8h_source.html  centrifuge_8md.html  dir_018a13a2a449345579a511a35b66f14b.html  dir_0415333496b27a5cdb1ac79f0581641c.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  dir_05ee31784900c30734478cd86d69db53.html  dir_05ee31784900c30734478cd86d69db53.js  dir_060f41b20d6c89db2f90aa844f1c4bc7.html  dir_08e3cba5eb2e412674946178c08340f0.html  dir_08e3cba5eb2e412674946178c08340f0.js  dir_0b1547634c9061a51e397d65ee463b07.html  dir_0b1547634c9061a51e397d65ee463b07.js  dir_0cdb2cc866043764b6efbddec577e796.js  dir_0f53dbfe9a185194ec98b48fc467ecae.html  dir_12df9c29bc0baba606a18c7e1e4a1e1d.html  dir_176af34e424baa1e746ad26b8c8c983a.html  dir_176af34e424baa1e746ad26b8c8c983a.js  dir_1b67cce1bc2de09ddca3d29e55bc2942.html  dir_1bd8c69ba3b80bdb708f329ddc377897.html  dir_1bd8c69ba3b80bdb708f329ddc377897.js  dir_20c639dbd8804df1d795a68009409220.html  (+185 more)
docs/latex/: 2024-10-03_8md.tex  2024-10-06_8md.tex  2024-10-07_8md.tex  About_8md.tex  CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  Centrifuge_8md.tex  Code_8md.tex  Injector_8md.tex  Pump_8md.tex  README_8md.tex  Sampler_8md.tex  System_8md.tex  about_8md.tex  analyze_8c.tex  analyze_8h.tex  analyze_8h_source.tex  analyze_8md.tex  arduino_2README_8md.tex  centrifuge_2README_8md.tex  centrifuge_8c.tex  centrifuge_8c_8o_8d.tex  centrifuge_8h.tex  centrifuge_8h_source.tex  centrifuge_8md.tex  dir_018a13a2a449345579a511a35b66f14b.tex  dir_0415333496b27a5cdb1ac79f0581641c.tex  dir_050edd66366d13764f98250ef6db77f6.tex  dir_05ee31784900c30734478cd86d69db53.tex  dir_060f41b20d6c89db2f90aa844f1c4bc7.tex  dir_08e3cba5eb2e412674946178c08340f0.tex  dir_0b1547634c9061a51e397d65ee463b07.tex  dir_0cdb2cc866043764b6efbddec577e796.tex  dir_0f53dbfe9a185194ec98b48fc467ecae.tex  dir_12df9c29bc0baba606a18c7e1e4a1e1d.tex  dir_176af34e424baa1e746ad26b8c8c983a.tex  dir_1ae4179d5e953611aae20c997279e02c.tex  dir_1b67cce1bc2de09ddca3d29e55bc2942.tex  dir_1bd8c69ba3b80bdb708f329ddc377897.tex  dir_1c7ca13ecde708f969726d46785198bd.tex  (+158 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_7.js  (+5 more)
documentation/html/: dir_3bb2881f7e7f8b53f8a391ee49570f79.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5a7e43e052b7fc595cac9bfd1df2c8d8.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_731a13f4a700bb063e53e6a0d8502ffe.html  dir_9071c615be952fdad7e4a963eddd978c.html  dir_9bb3c32919b7502410f82b52e0718b65.html  dir_a0f526b3268a8f32ae4657696c072264.html  dir_c3eb176d61e89159be7399ce5343d7a6.html  dir_c7fcb55611fde1d53ac4aa0bba89e7fc.html  dir_dfc618c6c3e46b5d58d5d0dcd9f16d14.html  dir_f00cec9afd6499f8253fcfa957983367.html  dir_f7addf33f88668b94b5c94086268d30e.html  files.html  pages.html
documentation/latex/: files.tex
models/: peristaltic_pump_roller.blend  raw.md
notes/: 2024-10-03.md  2024-10-06.md  2024-10-07.md  2024-10-08.md
(+119 files in other folders)
